# codecritter

./: .gitignore  README.md  pyproject.toml
codecritter/: __main__.py  app.py  art_cache.py  bones.py  cli.py  constants.py  hook_handlers.py  mcp_server.py  models.py  persistence.py  reactions.py  setup.py  shop.py  sync.py
codecritter-plugin/: .mcp.json  CLAUDE.md
codecritter-plugin/.claude-plugin/: marketplace.json  plugin.json
codecritter-plugin/hooks/: buddy-comment.sh  hooks.json  react.sh
codecritter-plugin/hooks/lib/: common.sh
codecritter-plugin/skills/buddy/: SKILL.md
codecritter-plugin/statusline/: codecritter-status.sh
codecritter/dungeon/: data_loader.py  detection.py  enemies.py  engine.py  generator.py  history.py  items.py  status_effects.py  types.py
codecritter/screens/: base.py  battle_screen.py  dungeon_screen.py  evolution_screen.py  extraction_screen.py  fork_screen.py  inventory_screen.py  loot_screen.py  main_screen.py  shop_dungeon_screen.py  shop_screen.py
codecritter/widgets/: dungeon_map.py  speech_bubble.py  stat_bar.py
jamb/: app.py  cli.py  constants.py  jamb.tcss  mcp_server.py  models.py  reactions.py  species_art.py  sync.py
jamb-plugin/: CLAUDE.md
jamb-plugin/.claude-plugin/: plugin.json
jamb-plugin/hooks/: buddy-comment.sh  hooks.json  react.sh
jamb-plugin/statusline/: jamb-status.sh
jamb/dungeon/: generator.py
jamb/screens/: battle_screen.py  dungeon_screen.py  evolution_screen.py  inventory_screen.py  loot_screen.py  main_screen.py  shop_screen.py
jamb/widgets/: ascii_art.py  speech_bubble.py
(+10 files in other folders)
