[project]
name = "codecritter"
version = "0.2.0"
description = "Terminal companion with dungeon crawler — lives in Claude Code's statusline"
requires-python = ">=3.12"
dependencies = ["textual>=1.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["mcp>=1.0"]

[project.scripts]
codecritter = "codecritter.__main__:main"
